@@ -38,3 +38,23 @@ tasks.register("downloadInsertParquetsIntoDBs") {
     description = "Download parquets and insert into the DuckDb database"
     dependsOn("downloadParquets", "insertParquetsIntoDBs")
 }
+
+tasks.register<JavaExec>("executeQuery") {
+    group = "etl"
+    description = "Execute query against the trip database"
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("com.xiaodi.taxi.query.TripAggregator")
+    // default positional args to your Java main()
+    args(
+        "2025-06-01 00:00:00",   // pickupDatetime
+        "2025-06-30 23:59:59",   // dropoffDatetime
+        "1",                  // puLocationID
+        "2",                  // doLocationID
+        "true",                  // groupByPaymentType
+        "1",                     // vendorID
+        "yellow",                // taxiType
+    )
+    jvmArgs(
+        "--enable-native-access=ALL-UNNAMED", // e.g. for DuckDB native load
+    )
+}
